test/semantics/programs/valid/forin-valid-condition1.guav
names = ["max", "evan", "guavascript"]

for name in names {
  print(name)
}