test/semantics/programs/invalid/forIn-invalid-condition1.guav
names = "name"

for name in names {
  print(name)
}